[gd_scene load_steps=8 format=3 uid="uid://dpboalolxvfys"]

[ext_resource type="Script" path="res://screens/main_menu/views/team_creation/team_creation.gd" id="1_kedc4"]
[ext_resource type="TileSet" uid="uid://c4wakeswnolih" path="res://assets/hud/popup.tres" id="2_6ttip"]
[ext_resource type="Texture2D" uid="uid://bdlp8wkff2hna" path="res://assets/teams_icons/Blue Potion 3.png" id="3_o1d24"]
[ext_resource type="Theme" uid="uid://cgj53xbuypu2k" path="res://assets/theme/theme.tres" id="4_d4406"]
[ext_resource type="PackedScene" uid="uid://d3hgujhlslrnh" path="res://view/styled_button/styled_button.tscn" id="5_tt4t7"]
[ext_resource type="Texture2D" uid="uid://dfgpnjp3w7ab0" path="res://assets/hud/larg_button_normal.png" id="6_aal3g"]
[ext_resource type="Texture2D" uid="uid://di05d40x7uyv5" path="res://assets/hud/larg_button_pressed.png" id="7_sp5q3"]

[node name="TeamCreation" type="MarginContainer"]
texture_filter = 1
custom_minimum_size = Vector2(390, 150)
offset_right = 111.0
offset_bottom = 31.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
script = ExtResource("1_kedc4")

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
tile_set = ExtResource("2_6ttip")
format = 2
layer_0/tile_data = PackedInt32Array(262144, 1, 1, 262145, 65537, 1, 262146, 65537, 1, 262147, 65537, 1, 262148, 65537, 1, 262149, 65537, 1, 262150, 65537, 1, 65543, 65537, 1, 131079, 65537, 1, 196615, 65537, 1, 262151, 65537, 1, 65544, 65537, 1, 131080, 65537, 1, 196616, 65537, 1, 262152, 65537, 1, 0, 1, 0, 65536, 1, 1, 131072, 1, 1, 196608, 1, 1, 1, 65537, 0, 65537, 65537, 1, 131073, 65537, 1, 196609, 65537, 1, 65538, 65537, 1, 131074, 65537, 1, 196610, 65537, 1, 65539, 65537, 1, 131075, 65537, 1, 196611, 65537, 1, 65540, 65537, 1, 131076, 65537, 1, 196612, 65537, 1, 65541, 65537, 1, 131077, 65537, 1, 196613, 65537, 1, 65542, 65537, 1, 131078, 65537, 1, 196614, 65537, 1, 9, 65537, 0, 10, 65537, 0, 11, 65537, 0, 12, 65537, 0, 13, 65537, 0, 14, 65537, 0, 15, 65537, 0, 2, 65537, 0, 3, 65537, 0, 4, 65537, 0, 5, 65537, 0, 6, 65537, 0, 7, 65537, 0, 8, 65537, 0, 65551, 65537, 1, 131087, 65537, 1, 196623, 65537, 1, 262159, 65537, 1, 262158, 65537, 1, 262157, 65537, 1, 262156, 65537, 1, 262155, 65537, 1, 262154, 65537, 1, 262153, 65537, 1, 65545, 65537, 1, 131081, 65537, 1, 65546, 65537, 1, 131082, 65537, 1, 196617, 65537, 1, 196618, 65537, 1, 65547, 65537, 1, 131083, 65537, 1, 196619, 65537, 1, 65548, 65537, 1, 131084, 65537, 1, 196620, 65537, 1, 65549, 65537, 1, 131085, 65537, 1, 196621, 65537, 1, 65550, 65537, 1, 131086, 65537, 1, 196622, 65537, 1, 589824, 1, 2, 589825, 65537, 2, 589826, 65537, 2, 589827, 65537, 2, 589828, 65537, 2, 589829, 65537, 2, 589830, 65537, 2, 589831, 65537, 2, 589832, 65537, 2, 589833, 65537, 2, 589834, 65537, 2, 589835, 65537, 2, 589836, 65537, 2, 589837, 65537, 2, 589838, 65537, 2, 589839, 65537, 2, 589840, 65537, 2, 589841, 65537, 2, 589842, 65537, 2, 589843, 65537, 2, 524288, 1, 1, 458752, 1, 1, 393216, 1, 1, 327680, 1, 1, 19, 65537, 0, 18, 65537, 0, 17, 65537, 0, 16, 65537, 0, 327687, 65537, 1, 327688, 65537, 1, 327689, 65537, 1, 327690, 65537, 1, 393227, 65537, 1, 393228, 65537, 1, 393229, 65537, 1, 458766, 65537, 1, 458767, 65537, 1, 458768, 65537, 1, 458769, 65537, 1, 524306, 65537, 1, 524307, 65537, 1, 327681, 65537, 1, 393217, 65537, 1, 458753, 65537, 1, 524289, 65537, 1, 327682, 65537, 1, 393218, 65537, 1, 458754, 65537, 1, 524290, 65537, 1, 327683, 65537, 1, 393219, 65537, 1, 458755, 65537, 1, 524291, 65537, 1, 327684, 65537, 1, 393220, 65537, 1, 458756, 65537, 1, 524292, 65537, 1, 327685, 65537, 1, 393221, 65537, 1, 458757, 65537, 1, 524293, 65537, 1, 327686, 65537, 1, 393222, 65537, 1, 458758, 65537, 1, 524294, 65537, 1, 393223, 65537, 1, 458759, 65537, 1, 524295, 65537, 1, 393224, 65537, 1, 458760, 65537, 1, 524296, 65537, 1, 393225, 65537, 1, 458761, 65537, 1, 524297, 65537, 1, 393226, 65537, 1, 458762, 65537, 1, 524298, 65537, 1, 327691, 65537, 1, 458763, 65537, 1, 524299, 65537, 1, 327692, 65537, 1, 458764, 65537, 1, 524300, 65537, 1, 327693, 65537, 1, 458765, 65537, 1, 524301, 65537, 1, 327694, 65537, 1, 393230, 65537, 1, 524302, 65537, 1, 327695, 65537, 1, 393231, 65537, 1, 524303, 65537, 1, 65552, 65537, 1, 131088, 65537, 1, 196624, 65537, 1, 262160, 65537, 1, 327696, 65537, 1, 393232, 65537, 1, 524304, 65537, 1, 65553, 65537, 1, 131089, 65537, 1, 196625, 65537, 1, 262161, 65537, 1, 327697, 65537, 1, 393233, 65537, 1, 524305, 65537, 1, 65554, 65537, 1, 131090, 65537, 1, 196626, 65537, 1, 262162, 65537, 1, 327698, 65537, 1, 393234, 65537, 1, 458770, 65537, 1, 65555, 65537, 1, 131091, 65537, 1, 196627, 65537, 1, 262163, 65537, 1, 327699, 65537, 1, 393235, 65537, 1, 458771, 65537, 1, 25, 131073, 0, 65561, 131073, 1, 131097, 131073, 1, 196633, 131073, 1, 262169, 131073, 1, 327705, 131073, 1, 393241, 131073, 1, 458777, 131073, 1, 524313, 131073, 1, 589849, 131073, 2, 20, 65537, 0, 21, 65537, 0, 22, 65537, 0, 23, 65537, 0, 24, 65537, 0, 589844, 65537, 2, 589845, 65537, 2, 589846, 65537, 2, 589847, 65537, 2, 589848, 65537, 2, 65556, 65537, 1, 131092, 65537, 1, 196628, 65537, 1, 262164, 65537, 1, 327700, 65537, 1, 393236, 65537, 1, 458772, 65537, 1, 524308, 65537, 1, 65557, 65537, 1, 131093, 65537, 1, 196629, 65537, 1, 262165, 65537, 1, 327701, 65537, 1, 393237, 65537, 1, 458773, 65537, 1, 524309, 65537, 1, 65558, 65537, 1, 131094, 65537, 1, 196630, 65537, 1, 262166, 65537, 1, 327702, 65537, 1, 393238, 65537, 1, 458774, 65537, 1, 524310, 65537, 1, 65559, 65537, 1, 131095, 65537, 1, 196631, 65537, 1, 262167, 65537, 1, 327703, 65537, 1, 393239, 65537, 1, 458775, 65537, 1, 524311, 65537, 1, 65560, 65537, 1, 131096, 65537, 1, 196632, 65537, 1, 262168, 65537, 1, 327704, 65537, 1, 393240, 65537, 1, 458776, 65537, 1, 524312, 65537, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_d4406")
theme_override_font_sizes/font_size = 48
text = "Choose your team"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16

[node name="TeamIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_o1d24")

[node name="TeamName" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme = ExtResource("4_d4406")
text = "Black Swans"

[node name="AnotherTeamButton" parent="VBoxContainer" instance=ExtResource("5_tt4t7")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("6_aal3g")
texture_pressed = ExtResource("7_sp5q3")
text = "Another!"

[node name="SelectTeamButton" parent="VBoxContainer" instance=ExtResource("5_tt4t7")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("6_aal3g")
texture_pressed = ExtResource("7_sp5q3")
text = "Good enough"

[node name="CloseButton" parent="." instance=ExtResource("5_tt4t7")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
